Edited wiki page through web user interface.

--- a/wiki/HighSpeed.wiki
+++ b/wiki/HighSpeed.wiki
@@ -3,7 +3,7 @@
 
 *High Speed* is a war game with cars for 1 to 4 simultaneous players. It was originally made with DIV Games Studio 2 back in the year 2002, and was ported for the first time to a real non-DOS language in 2009.
 
-It is a pretty shitty game, only uploaded here for historical reasons.
+It is a pretty shitty game, only uploaded here for archiving purposes.
 
 
 = Screenshots =
