--- a/wiki/MarcosLopez2.wiki
+++ b/wiki/MarcosLopez2.wiki
@@ -17,3 +17,8 @@ It is a direct sequel to the 2008 game [MarcosLopez Marcos Lopez].
 
   * Binaries: [http://bennugames.googlecode.com/files/mlopez2-v001a-win32.zip mlopez2-v001a-win32.zip] (6.5 MB)
   * Source: [http://bennugames.googlecode.com/files/mlopez2-v001-src.zip mlopez2-v001-src.zip] (5.6 MB)
+
+== Wii port (by beredezebe) ==
+
+  * Binaries: [http://bennugames.googlecode.com/files/mlopez2-v001-wii.zip mlopez2-v001-wii.zip] (18.3 MB)
+  * Source: [http://bennugames.googlecode.com/files/mlopez2-v001-wii-src.zip mlopez2-v001-wii-src.zip] (17.4 MB)
